# steer

./: .env.example  .gitignore  .prettierignore  AUDIO-DOCS-SUMMARY.md  AUDIO-UPDATE-NOTICE.md  AUDIO_CAPTURE_IMPROVEMENTS.md  BUILD-SUCCESS.md  CHANGELOG.md  CHAT_DUPLICATION_FIX.md  COMPILATION_FIX.md  CONTRIBUTING.md  DOCS-INDEX.md  EVENT_DRIVEN_ARCHITECTURE.md  FINAL_IMPROVEMENTS_SUMMARY.md  FINAL_SUMMARY.md  HOW_TO_USE_INTERVIEW_MODE.md  IMPLEMENTATION_CHECKLIST.md  IMPROVEMENTS_SUMMARY.md  INTEGRATION_COMPLETE.md  INTERVIEW_MODE_DESIGN.md  INTERVIEW_QUICK_START.md  INTERVIEW_UPDATE_SUMMARY.md  LICENSE  LOCKEDIN-FEATURES.md  LOCKEDIN-QUICKSTART.md  OVERLAY_REMOVAL.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_OPTIMIZATION.md  POST_ROLL_FIX.md  PROJECT_CONCEPT.md  QUICK_START.md  README.md  SECURITY.md  SERVER_SETUP.md  SILENCE_TRIMMING.md  SPEECH_ACCUMULATION.md  SPEED_OPTIMIZATIONS.md  STREAMING_IMPLEMENTATION.md  STREAMING_TOGGLE.md  VOICE_ACTIVITY_DETECTION.md  (+8 more)
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.kiro/specs/voice-assistant-overlay/: design.md  requirements.md  tasks.md
apps/api/: .env.example  README.md  drizzle.config.ts  eslint.config.js  package.json  tsconfig.json
apps/api/data/: interview.db
apps/api/drizzle/: 0000_pretty_husk.sql
apps/api/src/: index.ts  ws.ts
apps/desktop/: .env.example  .optimization-checklist.md  AUDIO-ALTERNATIVES.md  AUDIO-CHEATSHEET.md  AUDIO-MIGRATION-GUIDE.md  AUDIO-QUICK-FIX.md  AUDIO-README.md  AUDIO-TEST-COMMANDS.md  BUILD.md  CHEATSHEET.md  DEVICE-SELECTION.md  HOW-TO-DEBUG.md  INTEGRATION_TEST_RESULTS.md  MSI_SETUP_SUMMARY.md  OPTIMIZATION.md  OPTIMIZATION_SUMMARY.md  QUICK-FIX.md  QUICK_VERIFICATION_GUIDE.md  README-DEBUG.md  README.md  SECURITY_AUDIT.md  SETUP_COMPLETE.md  TASK_15_SUMMARY.md  VB-CABLE-MICROPHONE.md  VERIFICATION_CHECKLIST.md  WASAPI-GUIDE.md  WASAPI-QUICKSTART.md  build-msi.ps1  check-bundle-size.js  check-vb-cable.ps1  check-wav.ps1  create-temp-icon.ps1  diagnose-audio.ps1  eslint.config.js  index.html  package.json  tsconfig.json  verify-requirements.ps1  vite.config.ts  vitest.config.ts  (+5 more)
apps/desktop/src/: App.tsx  app-test.tsx  (+3 more)
apps/desktop/src-tauri/: .gitignore  Cargo.toml  LOGGING.md  LOGGING_IMPLEMENTATION_SUMMARY.md  tauri.conf.json  test-logging.ps1
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: .gitkeep  icon.icns
apps/desktop/src-tauri/src/: audio.rs  audio_wasapi.rs  commands.rs  logger.rs  main.rs
apps/desktop/src-tauri/tests/: integration_verification.rs
apps/desktop/src-tauri/wix/: CONFIGURATION.md  README.md  license.rtf  main.wxs
docs/: INTERVIEW_FEATURES.md  README.md  audio-debugging.md  examples-ru.md  interview-modes.md  quick-start-interview.md
(+74 files in other folders)
