[package]
name = "voice-assistant-overlay"
version = "1.0.0"
description = "Voice Assistant Overlay for Windows"
authors = ["Voice Assistant Team"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.6", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["shell-open"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros"], default-features = false }
cpal = "0.15"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
